--- a/modal.html
+++ b/modal.html
@@ -1,42 +1,196 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modal</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Modal</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-</div>
-        <!-- Botão para abrir o modal -->
-        <button id="openModalBtn">Abrir Modal</button>
+  </div>
 
-        <!-- Modal -->
-        <div id="largageModal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.5); justify-content:center; align-items:center;">
-            <div style="background:#fff; padding:2rem; border-radius:8px; min-width:300px; position:relative;">
-                <h2>Modal de Largage</h2>
-                <p>Conteúdo do modal aqui.</p>
-                <button id="closeModalBtn" style="position:absolute; top:10px; right:10px;">Fechar</button>
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#largageModalBootstrap">
+    Modal
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="largageModalBootstrap" tabindex="-1" aria-labelledby="largageModalBootstrapLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="largageModalBootstrapLabel">Horarios disponíveis</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <!-- Coluna do formulário -->
+            <div class="col-md-6 border-end">
+              <h6>Encontre o melhor horario: </h6>
+              <form id="formularioModal">
+                <div class="mb-3">
+                  <label for="tituloTurma" class="form-label">Turma</label>
+                  <input type="text" class="form-control" id="tituloTurma" name="tituloTurma" required>
+                </div>
+
+                <div class="mb-3">
+                  <label for="tituloDisciplina" class="form-label">Disciplina</label>
+                  <input type="text" class="form-control" id="tituloDisciplina" name="tituloDisciplina" required>
+                </div>
+
+                 <div class="mb-3">
+                  <label for="tituloCapacidade" class="form-label">Capacidade</label>
+                  <input type="number" class="form-control" id="tituloCapacidade" name="tituloCapacidade" required>
+                </div>
+
+                <div class="mb-3">
+                  <label for="blocoSelect" class="form-label">Bloco</label>
+                  <select class="form-select" id="blocoSelect" name="blocoSelect" required>
+                    <option value="">Selecione o bloco</option>
+                    <option value="A">A</option>
+                    <option value="B">B</option>
+                    <option value="C">C</option>
+                  </select>
+                </div>
+
+                <div class="mb-3">
+                  <label for="conjuntoSelect" class="form-label">Conjunto</label>
+                  <select class="form-select" id="conjuntoSelect" name="conjuntoSelect" required>
+                    <option value="">Selecione o conjunto</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                  </select>
+                </div>
+
+                <div class="mb-3">
+                  <label for="recursoSelect" class="form-label">Recurso</label>
+                  <select class="form-select" id="recursoSelect" name="recursoSelect" required>
+                    <option value="">Selecione o recurso</option>
+                    <option value="Projetor">Projetor</option>
+                    <option value="Computador">Computador</option>
+                    <option value="Quadro Branco">Quadro Branco</option>
+                  </select>
+                </div>
+
+                <div class="mb-3">
+                  <label for="Horarios" class="form-label">Selecione um ou mais Horarios: </label>
+                  <textarea class="form-control d-none" id="HorariosCard" name="HorariosCard" rows="3"></textarea>
+                  <div id="horariosBtnsContainer" class="d-flex flex-wrap gap-2"></div>
+                  <div id="reservaMsg" class="mt-2 text-success fw-bold" style="display:none;"></div>
+                </div>
+                <button type="submit" class="btn btn-success">Filtrar</button>
+              </form>
             </div>
+            <!-- Coluna de renderização dos cards -->
+            <div class="col-md-6">
+              <h6>Cards</h6>
+              <div id="cardsContainer"></div>
+            </div>
+          </div>
         </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
 
-        <div class="render">
         </div>
+      </div>
+    </div>
+  </div>
 
-        <script>
-            const openBtn = document.getElementById('openModalBtn');
-            const modal = document.getElementById('largageModal');
-            const closeBtn = document.getElementById('closeModalBtn');
+  <div class="render">
+  </div>
 
-            openBtn.onclick = function() {
-                modal.style.display = 'flex';
-            };
-            closeBtn.onclick = function() {
-                modal.style.display = 'none';
-            };
-        </script>
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script>
+    // Dados de exemplo de salas disponíveis por horário
+    const salasPorHorario = {
+      '08:00': [ { numero: 'M-220', turma: 'Turma A' }, { numero: 'M-221', turma: 'Turma B' } ],
+      '10:00': [ { numero: 'M-222', turma: 'Turma C' } ],
+      '14:00': [ { numero: 'M-223', turma: 'Turma D' }, { numero: 'M-224', turma: 'Turma E' } ],
+      '16:00': [ { numero: 'M-225', turma: 'Turma F' } ]
+    };
+
+    document.getElementById('formularioModal').addEventListener('submit', function (e) {
+      e.preventDefault();
+      const horariosInput = document.getElementById('HorariosCard').value.trim();
+      const horariosBtnsContainer = document.getElementById('horariosBtnsContainer');
+      const reservaMsg = document.getElementById('reservaMsg');
+      const cardsContainer = document.getElementById('cardsContainer');
+      horariosBtnsContainer.innerHTML = '';
+      reservaMsg.style.display = 'none';
+      cardsContainer.innerHTML = '';
+
+      // Pega os horários do textarea (separados por vírgula ou nova linha)
+      let horarios = horariosInput.split(/[,\n]+/).map(h => h.trim()).filter(h => h);
+      if (horarios.length === 0) {
+        horarios = ['08:00', '10:00', '14:00', '16:00'];
+      }
+
+      horarios.forEach(horario => {
+        const btn = document.createElement('button');
+        btn.type = 'button';
+        btn.className = 'btn btn-outline-primary';
+        btn.textContent = horario;
+        btn.onclick = function () {
+          // Toggle seleção
+          if (btn.classList.contains('btn-success')) {
+            btn.classList.remove('btn-success');
+            btn.classList.add('btn-outline-primary');
+            reservaMsg.style.display = 'none';
+            cardsContainer.innerHTML = '';
+          } else {
+            // Seleciona
+            btn.classList.remove('btn-outline-primary');
+            btn.classList.add('btn-success');
+            reservaMsg.style.display = 'none';
+            // Renderiza cards das salas disponíveis para o horário selecionado
+            cardsContainer.innerHTML = '';
+            const salas = salasPorHorario[horario] || [ { numero: 'M-999', turma: 'Turma X' } ];
+            salas.forEach(sala => {
+              const card = document.createElement('div');
+              card.className = 'card mb-2';
+              card.innerHTML = `
+                <div class="card-body">
+                  <h5 class="card-title">Sala: ${sala.numero}</h5>
+                  <p class="card-text">Turma: ${sala.turma}</p>
+                  <button type="button" class="btn btn-success reservar-btn">Reservar</button>
+                  <div class="confirmacao-reserva mt-2" style="display:none;"></div>
+                </div>
+              `;
+              // Adiciona evento ao botão reservar
+              card.querySelector('.reservar-btn').onclick = function() {
+                const confirmacaoDiv = card.querySelector('.confirmacao-reserva');
+                confirmacaoDiv.innerHTML = `
+                  <span>Tem certeza que deseja reservar essa sala?</span>
+                  <button type="button" class="btn btn-warning btn-sm ms-2 confirmar-btn">Confirmar</button>
+                `;
+                confirmacaoDiv.style.display = 'block';
+                const confirmarBtn = confirmacaoDiv.querySelector('.confirmar-btn');
+                confirmarBtn.onclick = function() {
+                  reservaMsg.textContent = `Reserva da sala ${sala.numero} feita com sucesso!`;
+                  reservaMsg.style.display = 'block';
+                  setTimeout(() => {
+                    reservaMsg.style.display = 'none';
+                  }, 2500);
+                  confirmacaoDiv.style.display = 'none';
+                };
+              };
+              cardsContainer.appendChild(card);
+            });
+          }
+        };
+        horariosBtnsContainer.appendChild(btn);
+      });
+    });
+  </script>
 </body>
+
 </html>
