--- a/modal.html
+++ b/modal.html
@@ -83,26 +83,7 @@
                   </select>
                 </div>
 
-                <div class="mb-3">
-                  <label class="form-label">Reserva Atual:</label>
-                  <div class="table-responsive">
-                    <table class="table table-bordered align-middle text-center">
-                      <thead style="background:yellow;">
-                        <tr>
-                          <th>dia da semana</th>
-                          <th>horario inicial</th>
-                          <th>horario final</th>
-                          <th>reserva atual</th>
-                          <th>checkbox(selecione)</th>
-                        </tr>
-                      </thead>
-                      <tbody id="horariosTableBody">
-                        <!-- Linhas dinâmicas via JS -->
-                      </tbody>
-                    </table>
-                  </div>
-                  <div id="reservaMsg" class="mt-2 text-success fw-bold" style="display:none;"></div>
-                </div>
+             
                 <button type="submit" class="btn btn-success">Filtrar</button>
                 <button type="button" class="btn btn-secondary ms-2" id="limparCamposBtn">Limpar Campos</button>
               </form>
@@ -111,6 +92,24 @@
             <div class="col-md-6">
               <h6>Cards</h6>
               <div id="cardsContainer" style="max-height: 650px; overflow-y: auto;"></div>
+              <label class="form-label mt-3">Reserva Atual:</label>
+              <div class="table-responsive">
+                <table class="table table-bordered align-middle text-center">
+                  <thead style="background:yellow;">
+                    <tr>
+                      <th>dia da semana</th>
+                      <th>horario inicial</th>
+                      <th>horario final</th>
+                      <th>reserva atual</th>
+                      <th>checkbox(selecione)</th>
+                    </tr>
+                  </thead>
+                  <tbody id="horariosTableBody">
+                    <!-- Linhas dinâmicas via JS -->
+                  </tbody>
+                </table>
+              </div>
+              <div id="reservaMsg" class="mt-2 text-success fw-bold" style="display:none;"></div>
             </div>
           </div>
         </div>
