--- a/modal.html
+++ b/modal.html
@@ -8,6 +8,9 @@
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="virtual-select.min.css">
+    <link rel="stylesheet" href="custom.css">
 </head>
 
 <body>
@@ -52,7 +55,8 @@
 
                 <div class="mb-3">
                   <label for="blocoSelect" class="form-label">Bloco</label>
-                  <select class="form-select" id="blocoSelect" name="blocoSelect" required>
+                  <div id="bloco-select"></div>
+                  <!-- <select class="form-select" id="blocoSelect" name="blocoSelect" required>
                     <option value="">Selecione o bloco</option>
                     <option value="A">A</option>
                     <option value="B">B</option>
@@ -60,29 +64,32 @@
                     <option value="D">D</option>
                     <option value="E">E</option>
                     <option value="F">F</option>
-                  </select>
+                  </select> -->
                 </div>
 
                 <div class="mb-3">
                   <label for="conjuntoSelect" class="form-label">Conjunto</label>
-                  <select class="form-select" id="conjuntoSelect" name="conjuntoSelect" required>
+                  <div id="conjunto-select"></div>
+                  <!-- <select class="form-select" id="conjuntoSelect" name="conjuntoSelect" required>
                     <option value="">Selecione o conjunto</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
-                  </select>
+                  </select> -->
                 </div>
 
                 <div class="mb-3">
                   <label for="recursoSelect" class="form-label">Recurso</label>
-                  <select class="form-select" id="recursoSelect" name="recursoSelect" required>
+                  <div id="recurso-select"></div>
+                  <!-- <select class="form-select" id="recursoSelect" name="recursoSelect" required>
                     <option value="">Selecione o recurso</option>
                     <option value="Projetor">Projetor</option>
                     <option value="Computador">Computador</option>
                     <option value="Quadro Branco">Quadro Branco</option>
-                  </select>
+                  </select> -->
                 </div>
 
+             
              
                 <button type="submit" class="btn btn-success">Filtrar</button>
                 <button type="button" class="btn btn-secondary ms-2" id="limparCamposBtn">Limpar Campos</button>
@@ -90,8 +97,6 @@
             </div>
             <!-- Cln dos cards -->
             <div class="col-md-6">
-              <h6>Cards</h6>
-              <div id="cardsContainer" style="max-height: 650px; overflow-y: auto;"></div>
               <label class="form-label mt-3">Reserva Atual:</label>
               <div class="table-responsive">
                 <table class="table table-bordered align-middle text-center">
@@ -109,6 +114,8 @@
                   </tbody>
                 </table>
               </div>
+              <h6>Cards</h6>
+              <div id="cardsContainer" style="max-height: 650px; overflow-y: auto;"></div>
               <div id="reservaMsg" class="mt-2 text-success fw-bold" style="display:none;"></div>
             </div>
           </div>
@@ -131,6 +138,8 @@
     crossorigin="anonymous"></script>
  
 </body>
+
+<script src="/virtual-select.min.js"></script>
 
 <script src="main.js"></script>
 </html>
