--- a/modal.html
+++ b/modal.html
@@ -97,6 +97,8 @@
             </div>
             <!-- Cln dos cards -->
             <div class="col-md-6">
+              <!-- <h6>Cards</h6> -->
+              <div id="cardsContainer" style="max-height: 650px; overflow-y: auto;"></div>
               <label class="form-label mt-3">Reserva Atual:</label>
               <div class="table-responsive">
                 <table class="table table-bordered align-middle text-center">
@@ -106,7 +108,7 @@
                       <th>horario inicial</th>
                       <th>horario final</th>
                       <th>reserva atual</th>
-                      <th>checkbox(selecione)</th>
+                      <th>Reserve o horario</th>
                     </tr>
                   </thead>
                   <tbody id="horariosTableBody">
@@ -114,8 +116,6 @@
                   </tbody>
                 </table>
               </div>
-              <h6>Cards</h6>
-              <div id="cardsContainer" style="max-height: 650px; overflow-y: auto;"></div>
               <div id="reservaMsg" class="mt-2 text-success fw-bold" style="display:none;"></div>
             </div>
           </div>
